--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # Variables
 $BROWSER = firefox-developer-edition
-$TERMINAL = alacritty
+$TERMINAL = kitty
 $mainMod = SUPER
 
 # Monitor
@@ -10,34 +10,10 @@ $mainMod = SUPER
 monitor = eDP-1,2880x1800@90,auto,2
 monitor=,highrr,auto,1
 
-# Enviroment
-env = GTK_THEME, WhiteSur-Dark
-env = XCURSOR_THEME, WhiteSur-cursors
+# Environment
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
-
-# Startup
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = dbus-update-activation-environment --all
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-exec-once = xrdb ~/.Xresources
-exec-once = mako
-exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = swayidle -w timeout 300 'swaylock -f' timeout 360 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'playerctl pause' before-sleep 'swaylock'
-exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
-exec-once = $HOME/.scripts/gsettings.sh
-exec-once = $HOME/.config/hypr/xdg.sh
-exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
-exec = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.jpg -m fill
-exec = pkill waybar; waybar
-
-# AutoStartup APP
-exec-once = sleep 2; telegram-desktop; hyprctl dispatch closewindow org.telegram.desktop
-exec-once = sleep 2; hyprctl dispatch exec [workspace 1] $BROWSER
-exec-once = sleep 2; hyprctl dispatch exec [workspace 2 silent] alacritty;
 
 # Hyprland Settings
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -48,33 +24,30 @@ input {
     repeat_rate = 45
     repeat_delay = 500
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     touchpad {
         natural_scroll = true
     }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 general {
-    no_border_on_floating = true
-    no_cursor_warps = true
-    gaps_in = 1
-    gaps_out = 2
-    border_size = 0
+    col.active_border = rgba(0A84FFEF)
+    gaps_in = 0
+    gaps_out = 1
+    border_size = 1
     cursor_inactive_timeout = 5
 }
 
 decoration {
     rounding = 0
     blur = false
-    blur_new_optimizations = true
+    drop_shadow = false
 }
 
 animations {
-    enabled = true
+    enabled = false
 }
 
 dwindle {
@@ -83,29 +56,52 @@ dwindle {
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = true
 }
 
 misc {
 	disable_hyprland_logo = true
-	disable_splash_rendering = true
-	# vfr = on
-	# disable_autoreload = true
-	key_press_enables_dpms = true
+	# key_press_enables_dpms = false
+	# mouse_move_enables_dpms = true
 }
 
+binds {
+    workspace_back_and_forth = true
+}
+
+# Startup
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --all
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = mako
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
+exec-once = wm-idle
+exec-once = wm-gsettings
+exec-once = wm-xdg
+exec-once = wm-xwayland
+exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
+exec = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.jpg -m fill
+exec = pkill waybar; waybar
+
+# AutoStartup APP
+exec-once = sleep 2; telegram-desktop; hyprctl dispatch closewindow org.telegram.desktop
+exec-once = sleep 2; hyprctl dispatch exec [workspace 1] $BROWSER
+exec-once = sleep 2; hyprctl dispatch exec [workspace 2 silent] $TERMINAL;
+
 # Windowrule
+# Floating Rules
 # Picture Viewer
 windowrulev2 = float,class:^(imv)$
 
 # Telegram
 windowrulev2 = float,class:^(org.telegram.desktop)$
+windowrulev2 = noborder,class:^(org.telegram.desktop)$
 # Telegram media viewer
 windowrulev2 = float,class:^(org.telegram.desktop)$,title:^(Media viewer)$
 windowrulev2 = center,class:^(org.telegram.desktop)$,title:^(Media viewer)$
@@ -128,6 +124,7 @@ windowrulev2 = float,class:^(Element)$
 windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = float,class:^(org.wireshark.Wireshark)$
 windowrulev2 = float,class:^(com.github.wwmm.easyeffects)$
+windowrulev2 = float,class:^(thunderbird)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float,class:^(mpv)$
 
@@ -154,10 +151,11 @@ bind = CTRL_ALT, Backspace, exit,
 
 bind = $mainMod, T, exec, $TERMINAL
 bind = SUPER_SHIFT, T, exec, [float] $TERMINAL
+bind = CTRL_SHIFT, escape, exec, $TERMINAL --title "System Monitor" -e htop
 bind = $mainMod, O, exec, hyprctl dispatch exec [workspace 3] obsidian
 bind = $mainMod, B, exec, $BROWSER
 bind = $mainMod, C, killactive
-bind = $mainMod, E, exec, alacritty -t 'LF Manager' -e lf
+bind = $mainMod, E, exec, $TERMINAL --title 'LF Manager' -e lf
 bind = $mainMod, F, togglefloating
 bind = $SUPER_SHIFT, F, fullscreen
 bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t1
