--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -24,8 +24,6 @@ input {
     repeat_rate = 45
     repeat_delay = 500
 
-    follow_mouse = 0
-
     touchpad {
         natural_scroll = true
     }
@@ -36,18 +34,20 @@ general {
     col.active_border = rgba(0A84FFEF)
     gaps_in = 0
     gaps_out = 1
-    border_size = 1
+    border_size = 0
     cursor_inactive_timeout = 5
 }
 
 decoration {
     rounding = 0
-    blur = false
+    blur {
+        enabled = true
+    }
     drop_shadow = false
 }
 
 animations {
-    enabled = false
+    enabled = true
 }
 
 dwindle {
@@ -65,7 +65,7 @@ gestures {
 
 misc {
 	disable_hyprland_logo = true
-	# key_press_enables_dpms = false
+	key_press_enables_dpms = true
 	# mouse_move_enables_dpms = true
 }
 
@@ -82,7 +82,7 @@ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = wm-idle
-exec-once = wm-gsettings
+exec-once = wm-gsetting
 exec-once = wm-xdg
 exec-once = wm-xwayland
 exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
@@ -96,6 +96,8 @@ exec-once = sleep 2; hyprctl dispatch exec [workspace 2 silent] $TERMINAL;
 
 # Windowrule
 # Floating Rules
+windowrulev2 = float,title:^(Exploer|System Monitor|Floating Terminal)$
+windowrulev2 = size 70% 70%,title:^(Exploer|System Monitor|Floating Terminal)$
 # Picture Viewer
 windowrulev2 = float,class:^(imv)$
 
@@ -126,7 +128,9 @@ windowrulev2 = float,class:^(org.wireshark.Wireshark)$
 windowrulev2 = float,class:^(com.github.wwmm.easyeffects)$
 windowrulev2 = float,class:^(thunderbird)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+
 windowrulev2 = float,class:^(mpv)$
+windowrulev2 = size 75%, 75%,class:^(mpv)$
 
 windowrulev2 = float,class:^(steamwebhelper)$,title:^(Steam)$
 windowrulev2 = size 70%,class:^(steamwebhelper)$,title:^(Steam)$
@@ -138,11 +142,14 @@ windowrulev2 = size 60%,class:^(code)$,title:^(Open Folder)$
 
 windowrulev2 = float,class:^(anki)$
 windowrulev2 = float,class:^(GoldenDict)$
-windowrulev2 = float,title:^(LF Manager)$
+windowrulev2 = float,title:^(System Monitor|Exploer)$
 windowrulev2 = float,title:^(Htop)$
 windowrulev2 = float,title:^Blender*
 windowrulev2 = workspace 4 silent,class:^(mpv)$
 windowrulev2 = workspace 5,class:code*
+
+# Blur
+layerrule = blur,waybar
 
 # Keybind
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
@@ -150,18 +157,18 @@ windowrulev2 = workspace 5,class:code*
 bind = CTRL_ALT, Backspace, exit,
 
 bind = $mainMod, T, exec, $TERMINAL
-bind = SUPER_SHIFT, T, exec, [float] $TERMINAL
+bind = SUPER_SHIFT, T, exec, [float] $TERMINAL --title "Floating Terminal"
 bind = CTRL_SHIFT, escape, exec, $TERMINAL --title "System Monitor" -e htop
 bind = $mainMod, O, exec, hyprctl dispatch exec [workspace 3] obsidian
 bind = $mainMod, B, exec, $BROWSER
 bind = $mainMod, C, killactive
-bind = $mainMod, E, exec, $TERMINAL --title 'LF Manager' -e lf
+bind = $mainMod, E, exec, $TERMINAL --title 'Exploer' -e lf
 bind = $mainMod, F, togglefloating
 bind = $SUPER_SHIFT, F, fullscreen
 bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t1
 bind = $mainMod, P, pseudo # dwindle
 bind = $mainMod, J, togglesplit # dwindle
-bind = $mainMod, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
+bind = $mainMod, S, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
 bind = SUPER_SHIFT, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
