chore: update wayfire config;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/wayfire.ini
+++ b/config/wayfire.ini
@@ -12,7 +12,7 @@ scale = 2
 mode = 2880x1800@60
 position = 0,0
 transform = normal
-scale = 1.5
+scale = 2
 [output:DP-1]
 mode = 3840x2160@60
 #position=
@@ -149,13 +149,13 @@ xwayland02 = xrdb ~/.Xresources
 autostart_wf_shell = false
 panel = pkill waybar; waybar
 notifications = mako
-backgroud = swaybg -i ~/wallpaper.jpg -m fill
+background = swaybg -i ~/wallpaper.jpg -m fill
 fcitx5 = env LANG=zh_CN.UTF-8 fcitx5 -d
-theme = ~/.scripts/gsettings.sh
+theme = wm-gsettings
 clipboard = wl-paste --type text --watch cliphist store
-gestures = libinput-gestures
 gamma = wlsunset
-idle = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 360 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c 000000'
+idle = wm-idle
+xdg = wm-xdg
 
 # Example configuration:
 #
