chore: update mpv config;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -15,14 +15,15 @@ autofit-larger = 75%
 hwdec-codecs   = all
 # enable vulkan->see more: https://github.com/mpv-player/mpv/issues/11739
 # vulkan need mpv 0.36+
-hwdec          = vulkan-copy,vaapi-copy  # <vaapi|vulkan>
-gpu-api        = vulkan
-gpu-context    = waylandvk
-vo             = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
-vf             = format:dolbyvision=yes
-cscale         = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
-scale          = bilinear          # 放大算法，默认值同上
-dscale         = # 缩小算法。若不设定，则自动采用 --scale 的值
+hwdec        = auto-copy-safe  # <vaapi|vulkan>
+gpu-api      = vulkan
+gpu-context  = waylandvk
+vo           = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
+vaapi-device = /dev/dri/renderD129
+vf           = format:dolbyvision=yes
+cscale       = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
+scale        = bilinear          # 放大算法，默认值同上
+dscale       = # 缩小算法。若不设定，则自动采用 --scale 的值
 
 # ===== OSD =====
 
@@ -39,7 +40,7 @@ save-position-on-quit=yes               # saves the seekbar position on exit
 # ===== RAM =====
 
 cache                  = yes                               # uses a large seekable RAM cache even for local input.
-cache-secs             = 1024                          # uses extra large RAM cache (needs cache=yes to make it useful).
+cache-secs             = 2048                          # uses extra large RAM cache (needs cache=yes to make it useful).
 demuxer-max-back-bytes = 200M              # sets fast seeking
 demuxer-max-bytes      = 1024M                   # sets fast seeking
 
