chore(mpv): fix mpv config;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -10,20 +10,23 @@ term-osd-bar            = yes # displays a progress bar on the terminal
 
 # ===== Video =====
 
-profile        = gpu-hq
-autofit-larger = 75%
-hwdec-codecs   = all
+profile         = gpu-hq
+hwdec-codecs    = all
 # enable vulkan->see more: https://github.com/mpv-player/mpv/issues/11739
 # vulkan need mpv 0.36+
-hwdec        = auto-copy-safe  # <vaapi|vulkan>
-gpu-api      = vulkan
-gpu-context  = waylandvk
-vo           = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
-vaapi-device = /dev/dri/renderD129
-vf           = format:dolbyvision=yes
-cscale       = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
-scale        = bilinear          # 放大算法，默认值同上
-dscale       = # 缩小算法。若不设定，则自动采用 --scale 的值
+hwdec           = auto-copy-safe  # <vaapi|vulkan>
+gpu-api         = vulkan
+gpu-context     = waylandvk
+vo              = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
+vaapi-device    = /dev/dri/renderD129
+vf              = format:dolbyvision=yes
+cscale          = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
+scale           = bilinear          # 放大算法，默认值同上
+dscale          = # 缩小算法。若不设定，则自动采用 --scale 的值
+
+# geometry        = 1080x720
+autofit-larger  = 75%
+autofit-smaller = 60%
 
 # ===== OSD =====
 
