--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -2,8 +2,8 @@
 gtk-theme-name=WhiteSur-Dark
 gtk-icon-theme-name=WhiteSur
 gtk-font-name=Sans 10
-gtk-cursor-theme-name=WhiteSur-cursors
-gtk-cursor-theme-size=0
+gtk-cursor-theme-name=WhiteSur Cursors
+gtk-cursor-theme-size=32
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=0
