chore(nvim): update snippets;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/nvim/lua/user/snippets/package.json
+++ b/config/nvim/lua/user/snippets/package.json
@@ -7,11 +7,7 @@
     "snippets": [
       {
         "language": "markdown",
-        "path": "./markdown.json"
-      },
-      {
-        "language": "vue",
-        "path": "./vue.json"
+        "path": "./obsidian.json"
       }
     ]
   }
