--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "submodules/uosc"]
 	path = submodules/uosc
 	url = git@github.com:tomasklaen/uosc.git
+[submodule "submodules/astronvim"]
+	path = submodules/astronvim
+	url = git@github.com:colorsakura/astronvim.git
