--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -18,15 +18,15 @@ hwdec           = auto-copy-safe  # <vaapi|vulkan>
 gpu-api         = vulkan
 gpu-context     = waylandvk
 vo              = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
-vaapi-device    = /dev/dri/renderD129
+vaapi-device    = /dev/dri/renderD128
 vf              = format:dolbyvision=yes
 cscale          = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
 scale           = bilinear          # 放大算法，默认值同上
 dscale          = # 缩小算法。若不设定，则自动采用 --scale 的值
 
 # geometry        = 1080x720
-autofit-larger  = 75%
-autofit-smaller = 60%
+# autofit-larger  = 75%
+# autofit-smaller = 60%
 
 # ===== OSD =====
 
@@ -43,9 +43,9 @@ save-position-on-quit=yes               # saves the seekbar position on exit
 # ===== RAM =====
 
 cache                  = yes                               # uses a large seekable RAM cache even for local input.
-cache-secs             = 2048                          # uses extra large RAM cache (needs cache=yes to make it useful).
-demuxer-max-back-bytes = 200M              # sets fast seeking
-demuxer-max-bytes      = 1024M                   # sets fast seeking
+cache-secs             = 1024                          # uses extra large RAM cache (needs cache=yes to make it useful).
+demuxer-max-back-bytes = 512M              # sets fast seeking
+demuxer-max-bytes      = 4096M                   # sets fast seeking
 
 # ===== Audio =====
 
@@ -68,7 +68,7 @@ gpu-shader-cache-dir = "~~/.cache/shader"
 load-auto-profiles = auto # <yes|no|默认auto> 新版条件配置预设（使用旧版外挂的用户记得禁用）
 load-osd-console   = yes  # 控制台，默认 yes
 load-stats-overlay = no  # 统计信息，默认 yes
-load-scripts       = yes       # 自动挂载 /scripts/ 目录中的所有外置脚本，默认 yes。设置为no时可用下一行示例的命令加载指定的外置脚本
+load-scripts       = yes       # 自动挂载 /scripts/ 目录中的所有外置脚本，默认 yes。
 
 
 # ===== Scripts =====
