chore(kitty): update kitty config; use default theme.
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,19 +1,14 @@
-allow_remote_control yes
-listen_on            unix:@kitty
-
 confirm_os_window_close 0
 
 font_family      monospace
 font_size   11
 
+background_opacity 0.8
+
 enable_audio_bell no
 
 scrollback_lines        100000
-mouse_hide_wait         0
 close_on_child_death    yes
-touch_scroll_multiplier 20
-strip_trailing_spaces   always
-shell_integration       no-rc
 cursor_shape            beam
 
 term xterm-256color
