chore(fcitx5): set `Ctrl + Shift` to change en-ch;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fcitx5/config
+++ b/config/fcitx5/config
@@ -1,6 +1,8 @@
 [Hotkey]
 # 反复按切换键时进行轮换
 EnumerateWithTriggerKeys=True
+# 临时在当前和第一个输入法之间切换
+AltTriggerKeys=
 # 轮换输入法时跳过第一个输入法
 EnumerateSkipFirst=False
 # 激活输入法
@@ -10,9 +12,6 @@ DeactivateKeys=
 
 [Hotkey/TriggerKeys]
 0=Control+Shift+Shift_L
-
-[Hotkey/AltTriggerKeys]
-0=Shift_L
 
 [Hotkey/EnumerateForwardKeys]
 0=Control+Shift_L
