--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "submodules/astronvim"]
 	path = submodules/astronvim
 	url = git@github.com:colorsakura/astronvim.git
+[submodule "submodules/rime-ice"]
+	path = submodules/rime-ice
+	url = https://github.com/iDvel/rime-ice.git
