--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -1,7 +1,5 @@
 # 垂直候选列表
 Vertical Candidate List=False
-# 按每个屏幕 DPI 显示
-PerScreenDPI=True
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
@@ -19,9 +17,17 @@ PreferTextIcon=False
 # 在图标中显示布局名称
 ShowLayoutNameInIcon=False
 # 使用输入法的语言来显示文字
-UseInputMethodLangaugeToDisplayText=True
+UseInputMethodLanguageToDisplayText=True
 # 主题
 Theme=Material-Color-Blue
+# 深色主题
+DarkTheme=default-dark
+# 跟随系统浅色/深色设置
+UseDarkTheme=True
+# 在 X11 上针对不同屏幕使用单独的 DPI
+PerScreenDPI=True
 # 固定 Wayland 的字体 DPI
 ForceWaylandDPI=96
+# 在 Wayland 下启用分数缩放
+EnableFractionalScale=False
 
