--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -20,7 +20,7 @@
       <string>zh-HK</string>
     </test>
     <test name="family">
-      <string>Noto Sans CJK SC</string>
+      <string>Noto Sans</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -33,7 +33,7 @@
       <string>zh-HK</string>
     </test>
     <test name="family">
-      <string>Noto Serif CJK SC</string>
+      <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
       <!-- not have HK -->
@@ -47,7 +47,7 @@
       <string>zh-HK</string>
     </test>
     <test name="family">
-      <string>Noto Sans Mono CJK SC</string>
+      <string>Noto Sans Mono</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -60,7 +60,7 @@
       <string>zh-TW</string>
     </test>
     <test name="family">
-      <string>Noto Sans CJK SC</string>
+      <string>Noto Sans</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -73,7 +73,7 @@
       <string>zh-TW</string>
     </test>
     <test name="family">
-      <string>Noto Serif CJK SC</string>
+      <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -86,7 +86,7 @@
       <string>zh-TW</string>
     </test>
     <test name="family">
-      <string>Noto Sans Mono CJK SC</string>
+      <string>Noto Sans Mono</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -99,7 +99,7 @@
       <string>ja</string>
     </test>
     <test name="family">
-      <string>Noto Sans CJK SC</string>
+      <string>Noto Sans</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -112,7 +112,7 @@
       <string>ja</string>
     </test>
     <test name="family">
-      <string>Noto Serif CJK SC</string>
+      <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -125,7 +125,7 @@
       <string>ja</string>
     </test>
     <test name="family">
-      <string>Noto Sans Mono CJK SC</string>
+      <string>Noto Sans Mono</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -138,7 +138,7 @@
       <string>ko</string>
     </test>
     <test name="family">
-      <string>Noto Sans CJK SC</string>
+      <string>Noto Sans</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -151,7 +151,7 @@
       <string>ko</string>
     </test>
     <test name="family">
-      <string>Noto Serif CJK SC</string>
+      <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
@@ -164,7 +164,7 @@
       <string>ko</string>
     </test>
     <test name="family">
-      <string>Noto Sans Mono CJK SC</string>
+      <string>Noto Sans Mono</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
