chore(nvim): use stable config;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/nvim/lua/user/snippets/package.json
+++ b/config/nvim/lua/user/snippets/package.json
@@ -8,6 +8,10 @@
       {
         "language": "markdown",
         "path": "./obsidian.json"
+      },
+      {
+        "language": "meson",
+        "path": "./meson.json"
       }
     ]
   }
