chore(fontconfig): disable bitmap;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -22,6 +22,9 @@
     <edit name="rgba" mode="assign">
       <const>rgb</const>
     </edit>
+    <edit name="embeddedbitmap" mode="assign">
+      <bool>false</bool>
+    </edit>
   </match>
 
   <!-- Default system-ui fonts -->
