--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "submodules/rime-ice"]
 	path = submodules/rime-ice
 	url = https://github.com/iDvel/rime-ice.git
+[submodule "submodules/z.lua"]
+	path = submodules/z.lua
+	url = https://github.com/skywind3000/z.lua.git
