chore(rime): rename user.patch;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -55,4 +55,4 @@
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
     - [pacman -Qqet > packages.new]
-    - [cd submodules/rime-ice && git apply ../../user.patch]
+    - [cd submodules/rime-ice && git apply ../../user-rime.patch]
