--- a/config/sway/config
+++ b/config/sway/config
@@ -2,12 +2,12 @@ include /etc/sway/config.d/*
 
 ### Variables
 set $mod Mod4
-set $TERMINAL kitty
+set $TERMINAL alacritty
 set $BROWSER firefox-developer-edition
 set $TOP htop
 
 ### Monitor
-output eDP-1 mode 2880x1800 scale 2
+output eDP-1 mode 2880x1800 scale 2.0
 
 ### Input
 input "type:keyboard" {
@@ -18,6 +18,7 @@ input "type:keyboard" {
 }
 
 input "type:touchpad" {
+    events disabled
     tap enabled
 }
 
@@ -54,70 +55,22 @@ exec_always --no-startup-id env LANG=zh_CN.UTF-8 LC_CTYPE=zh_CN.UTF-8 fcitx5 -d 
 # AutoStartup APP
 exec --no-startup-id auto-start
 
-### Keybinds
-# Gestures
-bindgesture swipe:3:right workspace prev
-bindgesture swipe:3:left workspace next
-bindgesture swipe:3:up move scratchpad
-bindgesture swipe:3:down scratchpad show
-
-# Use wev can get key name;
-# Exit Sway
-bindsym Ctrl+Alt+Backspace exit
-
-bindsym $mod+P sticky toggle
-bindsym Alt+Tab focus next
-
-bindsym Ctrl+Shift+Escape exec kitty --title "System Monitor" -e $TOP
-bindsym Ctrl+Alt+Period exec kitty --title "System Monitor" -e $TOP
-bindsym $mod+E exec kitty --title "Explore" -e lf $HOME
-
-bindsym $mod+F floating toggle
-bindsym $mod+Shift+F fullscreen toggle
-
-bindsym $mod+B exec $BROWSER
-bindsym $mod+O exec obsidian
-
-# Start a terminal
-bindsym $mod+T exec $TERMINAL
-bindsym $mod+Shift+T exec $TERMINAL --title "Float Terminal"
-
-# Kill focused window
-bindsym $mod+C kill
-
-# Start your launcher
-bindsym $mod+R exec wofi --show drun
-# bindsym $mod+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
-bindsym $mod+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
-
-bindsym $mod+V exec cliphist list | wofi --dmenu --hide-scroll | cliphist decode | wl-copy
-bindsym $mod+L exec swaylock -f
-
-# Keyboard Control Function
-bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
-bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
-
-bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{if ($3) print 0; else print int($2*100)}' > $WOBSOCK
-bindsym --locked XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-
-bindsym --locked XF86MonBrightnessUp exec light -A 5 && light -G | cut -d'.' -f1 > $WOBSOCK
-bindsym --locked XF86MonBrightnessDown exec light -U 5 && light -G | cut -d'.' -f1 > $WOBSOCK
-
-bindsym --locked XF86AudioPlay exec playerctl play-pause
-bindsym --locked XF86AudioNext exec playerctl next
-bindsym --locked XF86AudioPrev exec playerctl previous
-
-bindsym --locked Print exec grim -g - - | wl-copy --type image/png
-
-floating_modifier $mod normal
-
-# Reload the configuration file
-bindsym $mod+Shift+R reload
-
 ### Windowrule
 
 # Assign
 # assign [app_id="code"] workspace 5
+
+# Inhibit Idle if a window is fullscreen
+for_window [class="^.*"] inhibit_idle fullscreen
+for_window [app_id="^.*"] inhibit_idle fullscreen
+
+# Special rules for X11 not for Wayland
+for_window [window_role = "task_dialog"] floating enable
+for_window [window_role = "pop-up"] floating enable
+for_window [window_role = "bubble"] floating enable
+for_window [window_role = "dialog"] floating enable
+for_window [window_type = "dialog"] floating enable
+for_window [window_type = "menu"] floating enable
 
 # Floating Apps
 for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
@@ -134,18 +87,6 @@ for_window [app_id="Element"] floating enable
 for_window [app_id="timeshift-gtk"] floating enable
 for_window [app_id="anki"] floating enable
 for_window [app_id="mpv"] floating enable
-
-# Inhibit Idle if a window is fullscreen
-for_window [class="^.*"] inhibit_idle fullscreen
-for_window [app_id="^.*"] inhibit_idle fullscreen
-
-# Special rules for X11 not for wayland
-for_window [window_role = "pop-up"] floating enable
-for_window [window_role = "bubble"] floating enable
-for_window [window_role = "dialog"] floating enable
-for_window [window_type = "dialog"] floating enable
-for_window [window_role = "task_dialog"] floating enable
-for_window [window_type = "menu"] floating enable
 
 # JetBrains APPS
 for_window [class="jetbrains-.*" title="Welcome to .*"] {
@@ -164,7 +105,7 @@ for_window [app_id="Alacritty|kitty" title="Float Terminal|System Monitor|Explor
 # for_window [app_id="mpv-handler"] move scratchpad
 
 # Blender
-for_window [class="Blender Preferences"] floating enable
+for_window [title=".*(Preferences|设置)" app_id="blender"] floating enable
 
 # Goldendict
 for_window [class="GoldenDict-ng"] {
@@ -199,34 +140,79 @@ for_window [app_id="org.telegram.desktop" title="Media viewer"] {
 # }
 
 # Firefox
-for_window [app_id="firefoxdeveloperedition|firefox" title="About Firefox Developer Edition"] {
+for_window [app_id="firefox.*" title="About Firefox Developer Edition|Firefox"] {
     floating enable
 }
-for_window [app_id="firefoxdeveloperedition|firefox" title="^Picture-in-Picture$"] {
+for_window [app_id="firefox.*" title="^Picture-in-Picture$"] {
     floating enable
     resize set 60ppt 60ppt
 }
-for_window [app_id="firefoxdeveloperedition|firefox" title="^Library$"] floating enable
+for_window [app_id="firefox.*" title="^Library$"] floating enable
 
-#
+### Keybinds
+# Gestures
+bindgesture swipe:3:right workspace prev
+bindgesture swipe:3:left workspace next
+bindgesture swipe:3:up move scratchpad
+bindgesture swipe:3:down scratchpad show
+
+# Use wev can get key name;
+floating_modifier $mod normal
+# Exit Sway
+bindsym Ctrl+Alt+Backspace exit
+bindsym $mod+F floating toggle
+bindsym $mod+Shift+F fullscreen toggle
+bindsym $mod+P sticky toggle
+bindsym Alt+Tab focus next
+# Kill focused window
+bindsym $mod+C kill
+# Reload the configuration file
+bindsym $mod+Shift+R reload
+# Move the currently focused window to the scratchpad
+bindsym $mod+Shift+minus move window scratchpad
+# Show the next scratchpad window or hide the focused scratchpad window.
+# If there are multiple scratchpad windows, this command cycles through them.
+bindsym $mod+minus scratchpad show
+
+
+bindsym Ctrl+Shift+Escape exec kitty --title "System Monitor" -e $TOP
+bindsym Ctrl+Alt+Period exec kitty --title "System Monitor" -e $TOP
+bindsym $mod+E exec kitty --title "Explore" -e lf $HOME
+
+bindsym $mod+B exec $BROWSER
+bindsym $mod+O exec obsidian
+
+# Start a terminal
+bindsym $mod+T exec $TERMINAL
+bindsym $mod+Shift+T exec $TERMINAL --title "Float Terminal"
+
+# Start your launcher
+bindsym $mod+R exec wofi --show drun
+# bindsym $mod+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
+bindsym $mod+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+
+bindsym $mod+V exec cliphist list | wofi --dmenu --hide-scroll | cliphist decode | wl-copy
+bindsym $mod+L exec swaylock -f
+
+# Keyboard Control Function
+# @TODO: move this to a wrap function script, use wpctl and etc
+bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
+bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print int($2*100)}' > $WOBSOCK
+bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle | wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{if ($3) print 0; else print int($2*100)}' > $WOBSOCK
+bindsym --locked XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindsym --locked XF86MonBrightnessUp exec light -A 5 && light -G | cut -d'.' -f1 > $WOBSOCK
+bindsym --locked XF86MonBrightnessDown exec light -U 5 && light -G | cut -d'.' -f1 > $WOBSOCK
+bindsym --locked XF86AudioPlay exec playerctl play-pause
+bindsym --locked XF86AudioNext exec playerctl next
+bindsym --locked XF86AudioPrev exec playerctl previous
+bindsym --locked Print exec grim -g - - | wl-copy --type image/png
+
 # Moving around:
-#
 # Move your focus around
-# bindsym $mod+$left focus left
-# bindsym $mod+$down focus down
-# bindsym $mod+$up focus up
-# bindsym $mod+$right focus right
-# # Or use $mod+[up|down|left|right]
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-#
-# # Move the focused window with the same, but add Shift
-# bindsym $mod+Shift+$left move left
-# bindsym $mod+Shift+$down move down
-# bindsym $mod+Shift+$up move up
-# bindsym $mod+Shift+$right move right
 # Ditto, with arrow keys
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
@@ -234,13 +220,9 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 
-#
-# Workspaces:
-#
+### Workspaces:
+
 # Switch to workspace
-
-# bindsym $mod+Tab 
-
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
 bindsym $mod+3 workspace number 3
@@ -262,39 +244,6 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
-
-# Note: workspaces can have any name you want, not just numbers.
-# We just use 1-10 as the default.
-#
-# Layout stuff:
-#
-# You can "split" the current object of your focus with
-# $mod+b or $mod+v, for horizontal and vertical splits
-# respectively.
-
-    # Switch the current container between different layout styles
-
-
-    # Toggle the current focus between tiling and floating mode
-    # bindsym $mod+Shift+space floating toggle
-
-    # Swap focus between the tiling area and the floating area
-    # bindsym $mod+space focus mode_toggle
-
-    # Move focus to the parent container
-    # bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move window scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
 
 mode "mode" {
     bindsym $mod+s layout stacking
