chore(hyprland): disable touchpad;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,7 +7,7 @@ $mainMod = SUPER
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # ISSUE: when set bitdepth 10, grim, obs and etc didn't work
 # monitor = eDP-1,2880x1800@90,auto,2,bitdepth,10
-monitor = eDP-1,2880x1800@90,auto,2
+monitor = eDP-1,2880x1800@90,auto,2.0
 monitor=,highrr,auto,1
 
 # Environment
@@ -98,6 +98,7 @@ exec-once = sleep 2; hyprctl dispatch exec [workspace 2 silent] $TERMINAL;
 # Floating Rules
 windowrulev2 = float,title:^(Exploer|System Monitor|Floating Terminal)$
 windowrulev2 = size 70% 70%,title:^(Exploer|System Monitor|Floating Terminal)$
+
 # Picture Viewer
 windowrulev2 = float,class:^(imv)$
 
@@ -109,19 +110,19 @@ windowrulev2 = float,class:^(org.telegram.desktop)$,title:^(Media viewer)$
 windowrulev2 = center,class:^(org.telegram.desktop)$,title:^(Media viewer)$
 windowrulev2 = size 50%,class:^(org.telegram.desktop)$,title:^(Media viewer)$
 
-#
+# Fcitx5
 windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
 
 # Firefox
-windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Library)$
+windowrulev2 = float,class:^(firefoxdeveloperedition|firefox)$,title:^(Library)$
 
-windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
-windowrulev2 = nofullscreenrequest,class:^(firefoxdeveloperedition)$,title:^(Picture-in-Picture)$
-windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(About Firefox Developer Edition)$
+windowrulev2 = float,class:^(firefoxdeveloperedition|firefox)$,title:^(Picture-in-Picture)$
+windowrulev2 = nofullscreenrequest,class:^(firefoxdeveloperedition|firefox)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(firefoxdeveloperedition)$,title:^(About Firefox Developer Edition|Firefox)$
 
 windowrulev2 = float,class:^transmission*
-windowrulev2 = float,class:^(virt-manager)$
 windowrulev2 = size 50%, 50%,class:^transmission*
+windowrulev2 = float,class:^(virt-manager)$
 windowrulev2 = float,class:^(Element)$
 windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = float,class:^(org.wireshark.Wireshark)$
@@ -147,6 +148,12 @@ windowrulev2 = float,title:^(Htop)$
 windowrulev2 = float,title:^Blender*
 windowrulev2 = workspace 4 silent,class:^(mpv)$
 windowrulev2 = workspace 5,class:code*
+
+# Jetbrains Apps
+windowrulev2 = float,class: ^(jetbrains-.*)$,title:^(Welcome to .*)$
+windowrulev2 = size 60%, 60%,class: ^(jetbrains-.*)$,title:^(Welcome to .*)$
+
+# Xwayland Apps
 
 # Blur
 layerrule = blur,waybar
