--- a/config/fcitx5/conf/pinyin.conf
+++ b/config/fcitx5/conf/pinyin.conf
@@ -23,9 +23,9 @@ PreeditCursorPositionAtBeginning=True
 # 在预编辑中显示完整拼音
 PinyinInPreedit=True
 # 启用预测
-Prediction=False
+Prediction=True
 # 预测个数
-PredictionSize=5
+PredictionSize=3
 # 切换输入法时的行为
 SwitchInputMethodBehavior="Commit current preedit"
 # 选择第 2 个候选词
@@ -37,7 +37,7 @@ UseKeypadAsSelection=False
 # 使用退格键取消选词
 BackSpaceToUnselect=True
 # 句子数量
-Number of sentence=3
+Number of sentence=2
 # 输入长于...时提示长词 (设置为 0 时禁用)
 LongWordLengthLimit=4
 # 快速输入的触发键
@@ -97,29 +97,29 @@ InnerShort=False
 # 匹配不完整的元音 (e -> en, eng, ei)
 PartialFinal=False
 # 输入长度大于 4 时进行部分双拼匹配
-PartialSp=False
+PartialSp=True
 # u <-> v
-V_U=False
+V_U=True
 # an <-> ang
-AN_ANG=False
+AN_ANG=True
 # en <-> eng
-EN_ENG=False
+EN_ENG=True
 # ian <-> iang
-IAN_IANG=False
+IAN_IANG=True
 # in <-> ing
-IN_ING=False
+IN_ING=True
 # u <-> ou
 U_OU=False
 # uan <-> uang
-UAN_UANG=False
+UAN_UANG=True
 # c <-> ch
-C_CH=False
+C_CH=True
 # f <-> h
 F_H=False
 # l <-> n
-L_N=False
+L_N=True
 # s <-> sh
-S_SH=False
+S_SH=True
 # z <-> zh
-Z_ZH=False
+Z_ZH=True
 
