--- a/config/sway/config
+++ b/config/sway/config
@@ -2,7 +2,7 @@ include /etc/sway/config.d/*
 
 ### Variables
 set $mod Mod4
-set $TERMINAL alacritty
+set $TERMINAL kitty
 set $BROWSER firefox-developer-edition
 set $TOP htop
 
@@ -140,9 +140,9 @@ for_window [app_id="org.telegram.desktop" title="Media viewer"] {
 # }
 
 # Firefox
-for_window [app_id="firefox.*" title="About Firefox Developer Edition|Firefox"] {
-    floating enable
-}
+# for_window [app_id="firefox.*" title="About Firefox Developer Edition|Firefox"] {
+#     floating enable
+# }
 for_window [app_id="firefox.*" title="^Picture-in-Picture$"] {
     floating enable
     resize set 60ppt 60ppt
