chore(fcitx5): 启用拆字;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fcitx5/conf/pinyin.conf
+++ b/config/fcitx5/conf/pinyin.conf
@@ -9,7 +9,7 @@ SpellEnabled=False
 # 启用颜文字
 EmojiEnabled=False
 # 启用拆字
-ChaiziEnabled=False
+ChaiziEnabled=True
 # 启用 Unicode CJK 拓展区 B 中的字符
 ExtBEnabled=False
 # 启用云拼音
