chore(hyprland): add LG 4K display settings for hyprland;

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -8,7 +8,8 @@ $mainMod = SUPER
 # ISSUE: when set bitdepth 10, grim, obs and etc didn't work
 # monitor = eDP-1,2880x1800@90,auto,2,bitdepth,10
 monitor = eDP-1,2880x1800@90,auto,2.0
-monitor=,highrr,auto,1
+monitor = DP-1,3840x2160@60,2.0
+monitor=,highrr,auto,1.0
 
 # Environment
 env = XDG_CURRENT_DESKTOP,Hyprland
