chore(fontconfig): 添加css相关的web-ui字体配置；
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -44,7 +44,7 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Sans</string>
-      <string>Noto Sans CJK SC</string>
+      <string>Symbols Nerd Font</string>
       <string>Twemoji</string>
     </edit>
   </match>
@@ -56,6 +56,7 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Serif</string>
+      <string>Symbols Nerd Font</string>
       <string>Twemoji</string>
     </edit>
   </match>
@@ -67,22 +68,11 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>JetBrains Mono</string>
-      <string>Noto Sans CJK SC</string>
+      <string>Noto Sans Mono</string>
+      <string>Noto Sans Mono CJK SC</string>
       <string>Symbols Nerd Font</string>
       <string>Twemoji</string>
     </edit>
   </match>
-
-  <!-- Default Sans fonts-->
-  <match target="pattern">
-    <test name="family">
-      <string>Noto Sans</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans</string>
-      <string>Noto Sans CJK SC</string>
-    </edit>
-  </match>
-
 
 </fontconfig>
