--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -8,14 +8,16 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>文泉驿正黑</string>
+      <string>Noto Sans</string>
     </edit>
 </match>
 
 <match target="pattern">
     <test name="family">
-      <string>Microsoft YaHei</string>
+      <string>微软雅黑</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <string>Microsoft YaHei</string>
       <string>Noto Sans</string>
     </edit>
 </match>
