--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,18 +1,19 @@
 # MPV v3 Config - version 1.0.10
 
+# [Default]
+
 # ===== Terminal =====
-
-cursor-autohide         = 200                     # autohides the cursor after 200ms
-cursor-autohide-fs-only = yes             # don't autohide the cursor in window mode, only fullscreen
-msg-color               = yes                           # color log messages on terminal
-msg-module              = yes                          # prepend module name to log messages
+cursor-autohide         = 200 # autohides the cursor after 200ms
+cursor-autohide-fs-only = yes # don't autohide the cursor in window mode, only fullscreen
+msg-color               = yes # color log messages on terminal
+msg-module              = yes # prepend module name to log messages
 term-osd-bar            = yes # displays a progress bar on the terminal
-
+# ======= UI =======
 # ===== Video =====
-
 profile         = gpu-hq
 hwdec-codecs    = all
-# enable vulkan->see more: https://github.com/mpv-player/mpv/issues/11739
+# Enable vulkan
+# see more: https://github.com/mpv-player/mpv/issues/11739
 # vulkan need mpv 0.36+
 hwdec           = auto-copy-safe  # <vaapi|vulkan>
 gpu-api         = vulkan
@@ -23,55 +24,34 @@ vf              = format:dolbyvision=yes
 cscale          = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
 scale           = bilinear          # 放大算法，默认值同上
 dscale          = # 缩小算法。若不设定，则自动采用 --scale 的值
-
-# geometry        = 1080x720
-# autofit-larger  = 75%
-# autofit-smaller = 60%
-
 # ===== OSD =====
-
 osc                   = no
 border                = no
 osd-bar               = no
 osd-bold              = yes
 osd-font-size         = 14
-
 # ===== Seeking =====
-
 save-position-on-quit=yes               # saves the seekbar position on exit
-
 # ===== RAM =====
-
 cache                  = yes                               # uses a large seekable RAM cache even for local input.
 cache-secs             = 1024                          # uses extra large RAM cache (needs cache=yes to make it useful).
 demuxer-max-back-bytes = 512M              # sets fast seeking
 demuxer-max-bytes      = 4096M                   # sets fast seeking
-
 # ===== Audio =====
-
 volume-max             = 100                          # maximum volume in %, everything above 100 results in amplification
 volume                 = 70                               # default volume, 100 = unchanged
 audio-pitch-correction = yes       # 变速播放时的音调修正，默认 yes
-
 # ===== Subtitles =====
-
 sub-scale-with-window = yes
-
 # ===== Shaders =====
-
 #初始加载多个着色器的示例写法
 glsl-shaders         = "~~/shaders/KrigBilateral.glsl"
 gpu-shader-cache-dir = "~~/.cache/shader"
-
 # ===== Others =====
-
 load-auto-profiles = auto # <yes|no|默认auto> 新版条件配置预设（使用旧版外挂的用户记得禁用）
 load-osd-console   = yes  # 控制台，默认 yes
 load-stats-overlay = no  # 统计信息，默认 yes
 load-scripts       = yes       # 自动挂载 /scripts/ 目录中的所有外置脚本，默认 yes。
-
-
 # ===== Scripts =====
-
 ytdl               = yes  # 网址解析增强，默认 yes
 script-opts        = ytdl_hook-ytdl_path=yt-dlp
