chore(fontconfig): fix default sans issue;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -3,6 +3,17 @@
 <fontconfig>
 
   <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Noto Sans</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+
+
+  <match target="pattern">
     <test name="lang" compare="contains">
       <string>cn</string>
     </test>
