--- a/config/sway/config
+++ b/config/sway/config
@@ -3,7 +3,7 @@ include /etc/sway/config.d/*
 ### Variables
 set $mod Mod4
 set $TERMINAL kitty
-set $BROWSER firefox-developer-edition
+set $BROWSER firefox
 set $TOP htop
 
 ### Monitor
@@ -27,6 +27,7 @@ input "type:touchpad" {
 # seat * hide_cursor 5000
 
 ### General
+xwayland disable
 # default|stacking|tabbed
 # workspace_layout tabbed
 default_border pixel 1
@@ -48,7 +49,7 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
 exec wm-gsetting
 exec wm-idle
 exec wm-xdg
-exec wm-xwayland
+# exec wm-xwayland
 exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
 exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec_always --no-startup-id env LANG=zh_CN.UTF-8 LC_CTYPE=zh_CN.UTF-8 fcitx5 -d --replace
@@ -65,7 +66,7 @@ exec --no-startup-id auto-start
 for_window [class="^.*"] inhibit_idle fullscreen
 for_window [app_id="^.*"] inhibit_idle fullscreen
 
-# Special rules for X11 not for Wayland
+# Special rules for X11, wayland not supported `window_role`
 for_window [window_role = "task_dialog"] floating enable
 for_window [window_role = "pop-up"] floating enable
 for_window [window_role = "bubble"] floating enable
@@ -90,12 +91,13 @@ for_window [app_id="anki"] floating enable
 for_window [app_id="mpv"] floating enable
 
 # JetBrains APPS
-for_window [class="jetbrains-.*" title="Welcome to .*"] {
+for_window [class="^jetbrains-.*$" title="^Welcome to .*$"] {
     floating enable
     resize set 70ppt 70ppt
 }
+
 # Floating Terminal
-for_window [app_id="Alacritty|kitty" title="Float Terminal|System Monitor|Explore"] {
+for_window [app_id="^(Alacritty|kitty)$" title="^(Float Terminal|System Monitor|Explore)$"] {
     sticky enable
     floating enable
     resize set 70ppt 70ppt
@@ -106,7 +108,7 @@ for_window [app_id="Alacritty|kitty" title="Float Terminal|System Monitor|Explor
 # for_window [app_id="mpv-handler"] move scratchpad
 
 # Blender
-for_window [title=".*(Preferences|设置)" app_id="blender"] floating enable
+for_window [title="^.*(Preferences|设置)$" app_id="blender"] floating enable
 
 # Goldendict
 for_window [class="GoldenDict-ng"] {
@@ -114,7 +116,7 @@ for_window [class="GoldenDict-ng"] {
     resize set 70ppt 70ppt
 }
 
-# Picture Viewer
+# Imv
 for_window [app_id="imv"] {
     floating enable
     sticky enable
@@ -122,7 +124,7 @@ for_window [app_id="imv"] {
 }
 
 # Visaul Studio Code
-for_window [app_id="code" title=".*Folder.*"] {
+for_window [app_id="code" title="^.*Folder*$"] {
     floating enable
     resize set 60ppt 60ppt
 }
@@ -141,14 +143,14 @@ for_window [app_id="org.telegram.desktop" title="Media viewer"] {
 # }
 
 # Firefox
-# for_window [app_id="firefox.*" title="About Firefox Developer Edition|Firefox"] {
-#     floating enable
-# }
-for_window [app_id="firefox.*" title="^Picture-in-Picture$"] {
+for_window [app_id="^firefox.*$" title="^(About Firefox Developer Edition|Firefox)$"] {
+    floating enable
+}
+for_window [app_id="^firefox.*$" title="^Picture-in-Picture$"] {
     floating enable
     resize set 60ppt 60ppt
 }
-for_window [app_id="firefox.*" title="^Library$"] floating enable
+for_window [app_id="^firefox.*$" title="^Library$"] floating enable
 
 ### Keybinds
 # Gestures
@@ -188,7 +190,7 @@ bindsym $mod+T exec $TERMINAL
 bindsym $mod+Shift+T exec $TERMINAL --title "Float Terminal"
 
 # Start your launcher
-bindsym $mod+R exec wofi --show drun
+bindsym $mod+R exec ~/.config/rofi/scripts/launcher_t1
 # bindsym $mod+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
 bindsym $mod+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
