kitty: 禁用字体的连字功能；
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,9 @@
 font_family      monospace
 font_size   11
+disable_ligatures always
 
-background_opacity 0.8
+background_opacity 0.75
+background_blur 64
 
 enable_audio_bell no
 
