wm: replace rofi with wofi;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,9 +7,8 @@ $mainMod = SUPER
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # ISSUE: when set bitdepth 10, grim, obs and etc didn't work
 # monitor = eDP-1,2880x1800@90,auto,2,bitdepth,10
-monitor = eDP-1,2880x1800@90,auto,2.0
-monitor = DP-1,3840x2160@60,2.0
-monitor=,highrr,auto,1.0
+monitor = eDP-1,2880x1800@90,auto,2
+monitor=,highrr,auto,1
 
 # Environment
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -33,7 +32,7 @@ input {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 general {
     col.active_border = rgba(0A84FFEF)
-    gaps_in = 0
+    gaps_in = 1
     gaps_out = 1
     border_size = 0
     cursor_inactive_timeout = 5
@@ -48,7 +47,7 @@ decoration {
 }
 
 animations {
-    enabled = true
+    enabled = false
 }
 
 dwindle {
@@ -67,7 +66,6 @@ gestures {
 misc {
 	disable_hyprland_logo = true
 	key_press_enables_dpms = true
-	# mouse_move_enables_dpms = true
 }
 
 binds {
@@ -167,19 +165,20 @@ bind = CTRL_ALT, Backspace, exit,
 bind = $mainMod, T, exec, $TERMINAL
 bind = SUPER_SHIFT, T, exec, [float] $TERMINAL --title "Floating Terminal"
 bind = CTRL_SHIFT, escape, exec, $TERMINAL --title "System Monitor" -e htop
+bind = CTRL_ALT, Period, exec, $TERMINAL --title "System Monitor" -e htop
 bind = $mainMod, O, exec, hyprctl dispatch exec [workspace 3] obsidian
 bind = $mainMod, B, exec, $BROWSER
 bind = $mainMod, C, killactive
 bind = $mainMod, E, exec, $TERMINAL --title 'Exploer' -e lf
 bind = $mainMod, F, togglefloating
 bind = $SUPER_SHIFT, F, fullscreen
-bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t1
+bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo # dwindle
 bind = $mainMod, J, togglesplit # dwindle
 bind = $mainMod, S, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
-bind = SUPER_SHIFT, A, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+bind = SUPER_SHIFT, S, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
-bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, cliphist list | wofi --show dmenu | cliphist decode | wl-copy
 bind = $mainMod, L, exec, swaylock -f
 
 # to switch between windows in a floating workspace
