--- a/config/sway/config
+++ b/config/sway/config
@@ -189,7 +189,7 @@ bindsym $mod+T exec $TERMINAL
 bindsym $mod+Shift+T exec $TERMINAL --title "Float Terminal"
 
 # Start your launcher
-bindsym $mod+R exec ~/.config/rofi/scripts/launcher_t1
+bindsym $mod+R exec wofi --show drun
 # bindsym $mod+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
 bindsym $mod+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
