hyprland: fix typos;
Signed-off-by: iFlygo <iflygo@outlook.com>

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,9 +11,9 @@ monitor = eDP-1,2880x1800@90,auto,2
 monitor=,highrr,auto,1
 
 # Environment
-env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_CURRENT_DESKTOP,hyprland
 env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,hyprland
 
 # Hyprland Settings
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
