--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -76,6 +76,7 @@ binds {
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.jpg -m fill
 exec-once = mako
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -85,7 +86,6 @@ exec-once = wm-gsetting
 exec-once = wm-xdg
 exec-once = wm-xwayland
 exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
-exec = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.jpg -m fill
 exec = pkill waybar; waybar
 
 # AutoStartup APP
